More cleanup of generated directory structure and removed some images

--- a/_config.yml
+++ b/_config.yml
@@ -33,3 +33,10 @@ sass:
 # Build settings
 markdown  : kramdown
 permalink : /:title/
+
+exclude:
+  - README.md
+  - LICENSE
+  - Rakefile
+  - Gemfile
+  - Gemfile.lock
